# johnclient

./: Cargo.toml  build.bat  build.rs
src/: main.rs
src/mods/: clicker.rs  mod.rs  structs.rs  ui.rs  utils.rs
