[package]
name = "johnclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
key-names = { git = "https://github.com/HactarCE/key-names.git", branch = "main" }
egui-keybinds = { git = "https://github.com/probablyacai/egui-keybinds.git", branch = "master" }
enigo = "0.1.2"
hookmap-core = "0.2.1"
lazy_static = "1.4.0"
mki = "0.2.3"
rand = "0.8.5"
rodio = "0.17.1"
wasm-bindgen = "0.2.87"
strum = "0.25.0"
strum_macros = "0.25.0"
winapi = "0.3.9"
